# json-buffet

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  LICENSE.txt  Readme.md  Tutorial.md  json-chunker.cpp  json-fetcher.py  json-indexer.cpp  jsonbuffet.cpp  jsonbuffet.h  main.cpp  test.json  utils.cpp  utils.h
data/: prepare_index.ipynb
tests/: array_double.json  test.json
